use openstatsware name, add Shiny takeaways

--- a/slides/_metadata.yml
+++ b/slides/_metadata.yml
@@ -1,4 +1,4 @@
-subtitle: "ASA BIOP Course: Good Software Engineering Practice for R Packages"
+subtitle: "`openstatsware` Course: Good Software Engineering Practice for R Packages"
 date: "2023-09-26"
 date-format: long
 tags: [R, Package]
